# transcribr

./: .gitignore  LICENSE  README.md  pyproject.toml
transcribr/: __init__.py  transcribr.py
